tests/purs/failing/DerivingClauseNewtypeOnData.out
Error found:
in module [33mDerivingClauseNewtypeOnData[0m
at tests/purs/failing/DerivingClauseNewtypeOnData.purs:6:1 - 7:22 (line 6, column 1 - line 7, column 22)

  Cannot derive newtype instance for
  [33m                 [0m
  [33m  Data.Eq.Eq Pair[0m
  [33m                 [0m
  Make sure this is a newtype.


See https://github.com/purescript/documentation/blob/master/errors/InvalidNewtypeInstance.md for more information,
or to contribute content related to this error.

